<resources>
    <string name="app_name">Allergen Detector</string>
    <string name="title_lists">Lists</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="profile_name_default_placeholder">Default Profile Name Placeholder</string>
    <string name="profile_button_allergens">Allergens</string>
    <string name="profile_button_settings">Settings</string>
    <string name="profile_button_statistics">Statistics</string>
    <string name="placeholder">Placeholder</string>
    <string name="profile_avatar">Profile Avatar</string>
    <string name="edit_allergen">Edit Allergen</string>
    <string name="remove_allergen">Remove Allergen</string>
    <string name="allergen_severity">Allergen severity</string>
    <string name="title_allergen_list">Allergen List</string>
    <string name="title_photo">Photo</string>
    <string name="retake_button">Retake</string>
    <string name="use_button">Use</string>
    <string name="title_result">Scan Result</string>
    <string name="title_result_det">Detection Result</string>
    <string name="return_button">Return</string>
    <string name="proceed_button">Proceed</string>
    <string name="crop_button">Crop</string>
    <string name="edit_button">Edit</string>
...
    <string name="title_settings">Settings</string>
    <string name="change_avatar_button">Change Avatar</string>
    <string name="change_password_button">Change Password</string>
    <string name="change_language_button">Change Language</string>
    <string name="feedback_button">Feedback</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="cancel_button">Cancel</string>
    <string name="old_password_hint">Old Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="choose_from_gallery">Choose from Gallery…</string>
    <string name="title_product">Add Product</string>
    <string name="tag_format">#%1$s</string>
    <string name="harmful_tab">Harmful</string>
    <string name="harmless_tab">Harmless</string>
    <string name="enter_product_name">Enter product name…</string>
    <string name="possible_allergens">Possible allergens:</string>
    <string name="tags">Tags:</string>
    <string name="add_tag">Add</string>
    <string name="add_a_tag">Add a tag…</string>
    <string name="search_for_product">Search name/tag/category…</string>
    <string name="view_edit_product">View/Edit Product</string>
    <string name="ok_button">OK</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_button">Confirm</string>
    <string name="type_in_your_password_to_confirm_account_deletion">Type in your password to confirm account deletion.</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="recent_scans_title">Recent Scans</string>
    <string name="guidelines_title">Guidelines</string>
...
